--- a/public/registration.html
+++ b/public/registration.html
@@ -377,7 +377,8 @@ function pass1() {
             alert("enter correct details")
         }
     }
-          var url="http://localhost:3000";
+          //var url="http://localhost:3000";
+              var url="https://threerdsemse.onrender.com";
 
 function saveuser(name,password,catagory,phone){
     ds = { name:name,
