--- a/public/index.html
+++ b/public/index.html
@@ -424,7 +424,7 @@
         </span>
     </div>
 
-    <div class="mid">MEDTECH</div>
+    <div class="mid">HOSPITAL MANAGEMENT SYSTEM</div>
     <div class="total">
         <div class="left">
             <div class="items"class="btn" id="treatment" onclick="treatments()">TREATMENTS</div>
